# arkimet-postprocessor-suite

./: .copr.enc  .gitignore  .travis-build.sh  .travis.yml  Makefile.am  README.md  common.mk  configure.ac
arkimet-postprocess-bufr/: .gitignore  Makefile.am  README.asciidoc  arkimet-postprocess-bufr.7.txt.in  arkimet-postprocess-bufr.spec  bufr  bufr.in  configure.ac
arkimet-postprocess-bufr-filter/: .gitignore  Makefile.am  README.asciidoc  arkimet-postprocess-bufr-filter.spec  bufr-filter  configure.ac
arkimet-postprocess-json/: .gitignore  Makefile.am  README.asciidoc  TODO  arkimet-postprocess-json.7.txt.in  arkimet-postprocess-json.spec  bufr2chunks  configure.ac  json.in
arkimet-postprocess-singlepoint/: .gitignore  Makefile.am  arkimet-postprocess-singlepoint.7.txt.in  arkimet-postprocess-singlepoint.spec  configure.ac  singlepoint  singlepoint.in  test-singlepoint.sh.in
arkimet-postprocess-subarea/: .gitignore  Makefile.am  README.asciidoc  arkimet-postprocess-subarea.7.txt.in  arkimet-postprocess-subarea.spec  configure.ac  subarea  test-subarea.sh
bufr/: Makefile.am  bufr.md
fedora/SPECS/: arkimet-postprocessor-suite.spec
json/: Makefile.am  json  json.md
singlepoint/: Makefile.am  arkimet-postprocess-singlepoint.spec  singlepoint  singlepoint.md  test-singlepoint.sh
subarea/: Makefile.am  subarea  subarea.md  test-subarea.sh
