include $(top_srcdir)/common.mk

postproc_SCRIPTS = singlepoint

TESTS = test-singlepoint.sh

dist_doc_DATA = arkimet-postprocess-singlepoint.7.md

nodist_doc_DATA = arkimet-postprocess-singlepoint.7.html

nodist_man7_MANS = arkimet-postprocess-singlepoint.7

EXTRA_DIST = \
			 singlepoint \
			 test-singlepoint.sh \
			 test.grib1

CLEANFILES = \
			 arkimet-postprocess-singlepoint.7.html \
			 arkimet-postprocess-singlepoint.7
