include $(top_srcdir)/common.mk

dist_postproc_SCRIPTS = $(top_srcdir)/subarea

TESTS = test-subarea.sh

dist_doc_DATA = arkimet-postprocess-subarea.7.md

nodist_doc_DATA = arkimet-postprocess-subarea.7.html

nodist_man7_MANS = arkimet-postprocess-subarea.7

EXTRA_DIST = \
	     test-subarea.sh \
	     test.grib1 \
	     arkimet-postprocess-subarea.7.md

CLEANFILES = \
	     arkimet-postprocess-subarea.7.html \
	     arkimet-postprocess-subarea.7
